# group-files-command

./: Cargo.toml  README.md
src/: main.rs
src/commands/: sort.rs
