[package]
name = "group_files_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
# Поменять на git
group_files_lib = { path = "../group_files_lib" }
# my_other_project = { git = "../group_files_lib" }